# swecc-core

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TESTING.md  check_test_env.sh  docker-compose.yml  run_tests.sh  setup_tests.sh
.github/workflows/: ci.yml  debug-bench-api.yml  deploy-ai.yml  deploy-all.yml  deploy-bench-api.yml  deploy-bench-sandbox.yml  deploy-bench-worker.yml  deploy-bot.yml  deploy-chronos.yml  deploy-mcp-host.yml  deploy-rabbit.yml  deploy-redis.yml  deploy-scheduler.yml  deploy-server.yml  deploy-sockets.yml  diagnose-bench-llm-keys.yml  fix-gateway-dns.yml  management.yml  ops-prod-bench-gateway.yml  publish-swecc-bench.yml  publish-swecc-mesocosm.yml  rabbitmq-setup.yml  reusable-deploy.yml
infra/: bench-api.env.example  mesocosm.env.example  nginx.conf  nginx.dev.conf  push-bench-secrets.sh  stack.yml  upload-env.sh
infra/gateway/: .gitignore  README.md  docker-compose.yaml
s/: lib.sh
s/ci/: build.sh  lint.sh  resolve-docker-build.sh  test.sh
s/ops/: deploy.sh  diagnose-bench-llm-keys.sh  ensure-gateway-dns.sh  rabbitmq.sh
scripts/: ops-prod-bench-gateway.sh  scaffold-bench-auth-prs.sh  sync-prod-server-env.sh
services/ai/: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pytest.ini  requirements.txt  run_tests.sh
services/bench/: README.md  pyproject.toml
services/bench/common/: README.md  pyproject.toml
services/bench/common/bench_common/: __init__.py  config.py  model_catalog.py  mq_dispatch.py
services/bench/common/bench_common/auth/: __init__.py  credentials.py  session.py  swecc_server.py
services/bench/common/bench_common/cli/: __init__.py  __main__.py  main.py  urls.py
services/bench/common/bench_common/cli/templates/: LOCAL_DEV.md  benchanything.json  env.py  replay.example.json  requirements.txt  showcase_README.md
services/bench/common/bench_common/core/: binding_vow.py  domain.py  errors.py  run.py  run_env.py  scoring.py
services/bench/common/bench_common/env_sdk/: __init__.py  base.py  manifest.py  register.py  registration.py  server.py
services/bench/common/bench_common/eval/: metrics.py
services/bench/common/bench_common/export/: __init__.py  replay.py
services/bench/common/bench_common/inference/: __init__.py  __main__.py  bench.py  multi_bench.py
services/bench/common/bench_common/mq/: __init__.py  amqp_url.py
services/bench/common/bench_common/orchestrator/: service.py
services/bench/common/bench_common/runtime/: agent_loop.py  env_client.py  inference.py  multi_agent_loop.py
services/bench/common/bench_common/storage/: database.py  db_hints.py  dev_sync.py  django_store.py  sqlite_store.py  trace_store.py
services/bench/common/bench_common/techniques/: __init__.py  base.py  memory.py  multi_agent.py  tool_calling.py
services/bench/common/bench_common/utils/: github.py
services/bench/common/tests/: test_agent_loop_step_cap.py  test_cancel_run.py  test_cli_auth_login.py  test_cli_bench_url.py  test_cli_session_errors.py  test_cli_team_create.py  test_env_client_protocol.py  test_env_sdk_server_payloads.py  test_github_url.py  test_inference.py  test_init_db_hint.py  test_manifest.py  test_mq_amqp_url.py  test_mq_config.py  test_run_config_env_id.py  test_run_config_episode_cap.py  test_run_env_id.py  test_run_export.py  test_run_local_imports.py  test_supported_models.py  test_swecc_server_auth.py
services/bot/: .gitignore  Dockerfile  README.md  docker-compose.local.yml  main.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
services/chronos/: Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements.txt
services/mcp/: README.md
services/mcp/servers/bench-anything/: README.md  pyproject.toml
services/mcp/servers/bench-anything/bench_anything_mcp/: __init__.py  __main__.py  artifacts.py  client.py  infer.py  server.py  settings.py  validation.py
services/mcp/servers/bench-anything/bench_anything_mcp/rules/: judging_criteria.md  resources.md  theme.md
services/scheduler/: .env.prod  .gitignore  Dockerfile  README.md  entrypoint.sh
services/server/: Dockerfile  README.md  check_bench_migrations.py  docker-compose.local.yml  docker-entrypoint.sh  run_tests.py
services/sockets/: Dockerfile  README.md  generate_test_token.py  (+4 more)
(+499 files in other folders)
