[project]
name = "swecc-bench"
version = "0.2.0"
description = "BenchAnything CLI — scaffold envs, local Ollama evals, and Mesocosm API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SWECC Labs", email = "swecc@uw.edu" }]
keywords = ["benchmark", "evaluation", "llm", "ollama", "swecc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Bench storage uses Django ORM (the bench app lives in services/server/server/bench/).
    # bench-api calls django.setup() at boot to use these models in standalone mode.
    "Django>=4.2,<5.0",
    "psycopg[binary]>=3.1",
    "aiofiles>=24.0",
    "httpx>=0.27",
    "litellm>=1.50",
    "structlog>=24.0",
    "websockets>=13.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/swecc-uw/swecc-core"
Repository = "https://github.com/swecc-uw/swecc-core"
Issues = "https://github.com/swecc-uw/swecc-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bench = "bench_common.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bench_common"]

[tool.hatch.build.targets.wheel.force-include]
"bench_common/cli/templates" = "bench_common/cli/templates"

[tool.ruff]
target-version = "py311"
line-length = 120
