[project]
name = "bench_common"
version = "0.1.0"
description = "Shared runtime kernel for BenchAnything (monorepo internal; PyPI users install swecc-mesocosm)."
requires-python = ">=3.11"
dependencies = [
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Bench storage uses Django ORM (the bench app lives in services/server/server/bench/).
    # bench-api calls django.setup() at boot to use these models in standalone mode.
    "Django>=4.2,<5.0",
    "psycopg[binary]>=3.1",
    "aiofiles>=24.0",
    "httpx>=0.27",
    "litellm>=1.50",
    "structlog>=24.0",
    "websockets>=13.0",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bench = "bench_common.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bench_common"]

[tool.hatch.build.targets.wheel.force-include]
"bench_common/cli/templates" = "bench_common/cli/templates"

[tool.ruff]
target-version = "py311"
line-length = 120
