[project]
name = "bench-anything-mcp"
version = "0.1.0"
description = "MCP server for BenchAnything — benchmarks, evals, and hackathon helpers"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.scripts]
bench-anything-mcp = "bench_anything_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench_anything_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
